--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
 				<div class="bl1">
 					<img src="image/service-1.png" alt="">
 					<h2>Managment</h2>
-					<p>Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Officia vitae molestiae ipsum recusandae ipsam at, pariatur illum temporibus veritatis exercitationem porro alias! Perferendis, blanditiis maxime! Quae, quasi aut adipisci amet?</p>
+					<p>Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor</p>
 				</div>
 				<div class="bl2">
 					<img src="image/service-2.png" alt="">
 					<h2>UI/UX Design</h2>
-					<p>Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Officia vitae molestiae ipsum recusandae ipsam at, pariatur illum temporibus veritatis exercitationem porro alias! Perferendis, blanditiis maxime! Quae, quasi aut adipisci amet?</p>
+					<p>Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor</p>
 				</div>
 				<div class="bl3">
 					<img src="image/service-3.png" alt="">
 					<h2>Logo / Brandind</h2>
-					<p>Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Officia vitae molestiae ipsum recusandae ipsam at, pariatur illum temporibus veritatis exercitationem porro alias! Perferendis, blanditiis maxime! Quae, quasi aut adipisci amet?</p>
+					<p>Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor</p>
 				</div>
 				<div class="bl4">
 					<img src="image/service-4.png" alt="">
 					<h2>Animation</h2>
-					<p>Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Officia vitae molestiae ipsum recusandae ipsam at, pariatur illum temporibus veritatis exercitationem porro alias! Perferendis, blanditiis maxime! Quae, quasi aut adipisci amet?</p>
+					<p>Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor</p>
 				</div>
 			</div>
 		</div>
@@ -96,7 +96,7 @@
 		<div class="team">
 			<div class="team__header">
 						<h2 class="team__heading" id="about">Meet our team</h2>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti inventore, ullam sed alias aspernatur dolores veniam asperiores magni eligendi delectus, aliquam reiciendis itaque numquam aut, quaerat quod. Fuga, sed, libero.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed dooing eiusmod tempor incididut labore Ui / Ux , print template.</p>
 			</div>
 			<div class="team__members">
 				<img class="lead_jpeg" src="image/man.svg" alt="Изображение лидера" width="auto" height="458px";>
